--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,25 +1,89 @@
-<%= link_to "Back", "/users/#{@user.id}/discover" %>
-<%= link_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movie.id}/viewing_party/new", method: :get %>
-<h2>Title: <%= @movie.title %></h2>
-<p>Vote Average: <%= @movie.vote_average %></p>
-<p>Run Time: <%= @movie.runtime %></p>
-<p>Summary: <%= @movie.summary %></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movie Details</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+    }
 
-<p>Genres: <% @movie.genres.each do |genre| %>
-  <%= genre[:name] %>
-<% end %></p>
-<h3>Cast</h3>
-<div id="actors">
-  <% @actors.each do |actor| %>
-      <p><%= actor.name %></p>
-  <% end %>
-</div>
-<h3>Reviews</h3>
-<div id="reviews">
-  <% @reviews.each do |review| %>
-    <p>Author: <%= review.author %></p>
-    <p><%= review.content %></p>
-    <p>Rating: <%= review.rating %></p>
-  <% end %>
-  <p>Total Reviews: <%= @reviews.count %></p>
-</div>
+    .movie-details-container {
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px 40px;
+    }
+
+    .movie-details-container a {
+      color: #4CAF50;
+      text-decoration: none;
+    }
+
+    .movie-details-container a:hover {
+      text-decoration: underline;
+    }
+
+    .movie-details-container h2 {
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
+
+    .movie-details-container h3 {
+      margin-bottom: 10px;
+    }
+
+    .movie-details-container p {
+      margin-bottom: 10px;
+    }
+
+    .movie-details-container ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .movie-details-container li {
+      margin-bottom: 10px;
+    }
+
+  </style>
+</head>
+<body>
+  <div class="movie-details-container">
+    <%= link_to "Back", "/users/#{@user.id}/discover" %>
+
+    <h2>Title: <%= @movie.title %></h2>
+    <%= link_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movie.id}/viewing_party/new", method: :get %>
+
+    <p>Vote Average: <%= @movie.vote_average %></p>
+    <p>Run Time: <%= @movie.runtime %></p>
+    <p>Summary: <%= @movie.summary %></p>
+
+    <p>Genres: <% @movie.genres.each do |genre| %>
+      <%= genre[:name] %>
+    <% end %></p>
+
+    <h3>Cast</h3>
+    <div id="actors">
+      <% @actors.each do |actor| %>
+        <p><%= actor.name %></p>
+      <% end %>
+    </div>
+
+    <h3>Reviews</h3>
+    <div id="reviews">
+      <% @reviews.each do |review| %>
+        <p>Author: <%= review.author %></p>
+        <p><%= review.content %></p>
+        <p>Rating: <%= review.rating %></p>
+      <% end %>
+      <p>Total Reviews: <%= @reviews.count %></p>
+    </div>
+  </div>
+</body>
+</html>
