--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,89 @@
-<h1><%= @user.name%>'s Dashboard</h1>
-<br>
-<br>
-<%= link_to "Discover Movies", "/users/#{@user.id}/discover" %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= @user.name %>'s Dashboard</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+    }
 
-<% @parties_info.each do |info| %>
-<div id="party-<%= info[:movie_id] %>">
-  <p><img src=<%= "#{info[:image]}"%>></p>
-  <p><%= link_to "#{info[:title]}", "/users/#{@user.id}/movies/#{info[:movie_id]}" %></p>
-  <p>Date: <%= info[:date].strftime("%B %d, %Y") %></p>
-  <p>Time: <%= info[:time].strftime("%I:%M%p") %></p>
-  <p>Host: </p>
-          <b> &emsp; <%= info[:host] %></b>
-          <div id="attendees-<%= info[:movie_id] %>">
-            <p>Attendees: <% info[:attendees].each do |attendee| %></p>
-            <p> &emsp; <%= attendee.name %></p>
-          <% end %> 
-</div>
-<% end %>
+    .dashboard-container {
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px 40px;
+    }
+
+    .dashboard-container h1 {
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
+    .dashboard-container a {
+      color: #4CAF50;
+      text-decoration: none;
+    }
+
+    .dashboard-container a:hover {
+      text-decoration: underline;
+    }
+
+    .party-container {
+      background-color: #f0f0f0;
+      border-radius: 4px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+      padding: 15px;
+    }
+
+    .party-container img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .party-info {
+      font-weight: bold;
+    }
+
+    .attendees {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
+    .attendee-name {
+      margin-left: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="dashboard-container">
+    <h1><%= @user.name %>'s Dashboard</h1>
+    <br>
+    <br>
+    <%= link_to "Discover Movies", "/users/#{@user.id}/discover" %>
+
+    <% @parties_info.each do |info| %>
+      <div class="party-container" id="party-<%= info[:movie_id] %>">
+        <p><img src=<%= "#{info[:image]}" %>></p>
+        <p><%= link_to "#{info[:title]}", "/users/#{@user.id}/movies/#{info[:movie_id]}" %></p>
+
+        <p class="party-info">Date: <%= info[:date].strftime("%B %d, %Y") %></p>
+        <p class="party-info">Time: <%= info[:time].strftime("%I:%M%p") %></p>
+        <p class="party-info">Host: <b><%= info[:host] %></b></p>
+        <div class="attendees" id="attendees-<%= info[:movie_id] %>">
+          <p>Attendees:</p>
+          <% info[:attendees].each do |attendee| %>
+            <p class="attendee-name"><%= attendee.name %></p>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</body>
+</html>
