--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -8,35 +8,45 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 30px;
+      margin-bottom: 30px;
     }
 
     .welcome-container {
       background-color: #ffffff;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
-      margin: 50px auto;
+      max-width: 400px;
+      margin: 0 auto;
       padding: 20px 40px;
     }
 
-    .welcome-container h1 {
+    .welcome-container h2 {
       margin-top: 0;
       margin-bottom: 20px;
     }
 
-    .register-button {
+    .welcome-container a {
       background-color: #4CAF50;
       border: none;
       border-radius: 4px;
       color: white;
       cursor: pointer;
+      display: inline-block;
       font-size: 16px;
       padding: 10px 20px;
       text-decoration: none;
       text-transform: uppercase;
+      margin-bottom: 10px;
     }
 
-    .register-button:hover {
+    .welcome-container a:hover {
       background-color: #45a049;
     }
 
@@ -62,12 +72,18 @@
   </style>
 </head>
 <body>
+  <h1>Viewing Party</h1>
   <div class="welcome-container">
-    <h1>Welcome to Viewing Party!</h1>
-    <p><%= link_to "Register New User", "/register", class: "register-button" %></p>
-    <br><br>
+    <h2>Welcome</h2>
+    <% if session[:user_id] %>
+      <%= link_to "Log Out", logout_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Create a New User', register_path %>
+      <br>
+      <%= link_to "Log In", login_path %>
+    <% end %>
+    <p>Registered Users:</p>
     <ul class="user-list">
-    <h3>Current users</h3>
       <% @users.each do |user| %>
         <li id="user_names<%= user.id %>">
           <%= link_to user.name, "/users/#{user.id}" %>
