add: login testing suite

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -66,9 +66,11 @@
     }
 
     .user-list a:hover {
-      color: #4CAF50;
-      text-decoration: underline;
+      color: #333;
+      text-decoration: none;
+      background-color: transparent;
     }
+
   </style>
 </head>
 <body>
