--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,5 +7,8 @@
   <%= form.label :email%>
   <%= form.text_field :email, required: true, uniqueness: true%>
 
+  <%= form.label :password, 'password:' %>
+  <%= form.password_field :password %>
+
   <%= form.submit "Submit"%>
 <%end%>
