--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,5 +10,8 @@
   <%= form.label :password, 'password:' %>
   <%= form.password_field :password %>
 
+  <%=form.label :password_confirmation %>
+  <%=form.password_field :password_confirmation%>
+
   <%= form.submit "Submit"%>
 <%end%>
