--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,15 @@
 <h1>Viewing Party</h1>
 <h3>Register a New User</h3>
 <section class = "register_user">
-  <%= form_with url: "/register", method: :post, local: true do |form| %>
+  <%= form_with model: @user do |form| %>
     <%= form.label :name, "Name:" %>
     <%= form.text_field :name %> <br>
     <%= form.label :email, "Email:" %>
     <%= form.text_field :email %> <br>
+    <%= form.label :password, "Password" %>
+    <%= form.password_field :password %>
+    <%= form.label :password, "Password Confirmation" %>
+    <%= form.password_field :password_confirmation %>
     <%= form.button "Create New User" %>
   <% end %>
 </section>
