--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,8 @@
     <%= f.text_field :name %><br><br>
     <%= f.label :email, "Email:" %>
     <%= f.text_field :email %><br><br>
+    <%= f.label :password, "Password:" %>
+    <%= f.text_field :password %><br><br>
     <%= f.submit "Create New User" %>
   <% end %>
 </div>
