--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,23 @@
 <h3>Register a New User</h3>
 
-<%# <body>
-  <center><table> %>
-    <%= form_with url: "/register", method: :post, local: true do |f| %>
-    <%# <tr> %>
-      <%= f.label :name %> 
-      <%= f.text_field :name %> 
-    <%# </tr>
-    <tr> %>
-      <%= f.label :email %> 
-      <%= f.text_field :email %> 
-    <%# </tr>
-    <tr> %>
+  <%= form_with url: "/register", method: :post, local: true do |f| %>
+  <%# <%= form_with model: @user, local: true do |f| %> 
+
+    <%= f.label :name, "Name:"%> 
+    <%= f.text_field :name %> 
+    <br>
+
+    <%= f.label :email, "Email:" %> 
+    <%= f.text_field :email %> 
+    <br>
+
+    <%= f.label :password, "Password:" %> 
+    <%= f.password_field :password %> 
+    <br>
+
+     <%= f.label :password_confirmation, "Type your password again:" %> 
+    <%= f.password_field :password_confirmation %> 
+    <br>
+
     <%= f.submit "Create New User" %> 
-    <%# </tr> %>
-    <% end %>
-  <%# </table> </center>
-</body> %>
+  <% end %>
