--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,12 @@
   </head>
 
   <body>
-  <% flash.each do |type, msg| %>
-      <div>
-        <%= msg %>
-      </div>
-    <% end %>
     <%= link_to "Landing Page", "/" %>
       <h1>Viewing Party</h1>
       <br>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, class: name %>
+    <% end %> 
     <%= yield %>
   </body>
 </html>
