--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,16 +2,16 @@
 
 <%= form_with url: "/register", method: :post, local: :true do |form|%>
   <%= form.label :name%>
-  <%= form.text_field :name, required: true %>
+  <%= form.text_field :name %>
 
   <%= form.label :email%>
-  <%= form.text_field :email, required: true, uniqueness: true%>
+  <%= form.text_field :email %>
 
   <%= form.label :password, 'password:' %>
   <%= form.password_field :password %>
 
   <%=form.label :password_confirmation %>
-  <%=form.password_field :password_confirmation%>
+  <%=form.password_field :password_confirmation %>
 
   <%= form.submit "Submit"%>
 <%end%>
