--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,8 @@
     <%= f.text_field :email %><br><br>
     <%= f.label :password, "Password:" %>
     <%= f.text_field :password %><br><br>
+    <%= f.label :password_confirmation, "Confirm Password:" %>
+    <%= f.text_field :password_confirmation %><br><br>
     <%= f.submit "Create New User" %>
   <% end %>
 </div>
