feature: Week3 challenge 1: Added authorization to home page and login

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,7 @@
 <p style="text-align: center; margin-top: 20px;">
   <%= button_to "Create New User", "/register", method: :get, style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
+  <br>
+  <%= link_to "I already have an account", login_path, style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
 </p>
 
 <div id="existing_users" style="margin-top: 20px;">
