--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,5 +6,12 @@
   <br>
   <%= form.text_field :email %>
   <%= form.label :email, "Email" %>
+  <br>
+  <%= form.password_field :password %>
+  <%= form.label :password %>
+  <br>
+  <%= form.password_field :password_confirmation %>
+  <%= form.label :password_confirmation %>
+  <br>
   <%= form.submit "Create User" %>
 <% end %>
