--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "Landing Page", root_path, local: true %>
+<%= link_to "Log In", login_path, local: true %>
 <h1>Viewing Party</h1>
 <ul>
   <% @users.each do |user| %>
