--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,5 +7,12 @@
     
       <%= form.label :email, "Email" %>
       <%= form.text_field :email %>
+
+      <%= form.label :password, "Password" %>
+      <%= form.text_field :password %>
+
+      <%= form.label :password_confirmation, "Password Confirmation" %>
+      <%= form.text_field :password_confirmation %>
+
       <%= form.button "Register" %>
     <% end %>
