--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   <%= form.label :email%>
   <%= form.text_field :email %>
 
-  <%= form.label :password, 'password:' %>
+  <%= form.label :password %>
   <%= form.password_field :password %>
 
   <%=form.label :password_confirmation %>
