Rushed to finish in time due to internet problems

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h3>Register a New User</h3>
 
-  <%= form_with url: "/register", method: :post, local: true do |f| %>
-  <%# <%= form_with model: @user, local: true do |f| %> 
+  <%# <%= form_with url: "/register", method: :post, local: true do |f| %> %>
+  <%= form_with model: @user do |f| %>
 
     <%= f.label :name, "Name:"%> 
     <%= f.text_field :name %> 
