--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,10 @@
-<%= button_to "Create a New User", "/register", method: :post %>
+<%= link_to "Create a New User", "/register" %>
 <br>
-<h2>Existing Users:</h2>
-<% @users.each do |user| %>
-  <p><%= link_to user.email, "/users/#{user.id}" %>
-<% end %>
+<%= link_to "Log In", "/login" %>
+
+  <%# <%= link_to "Log In", login_path %>
+
+  <%# <h2>Existing Users:</h2>
+  <% @users.each do |user| %>
+    <%# <p><%= link_to user.email, "/users/#{user.id}" %> 
+  <%# <% end %> 
