--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h3>Register a New User</h3>
 
-  <%# <%= form_with url: "/register", method: :post, local: true do |f| %> %>
+  <%# <%= form_with url: "/register", method: :post, local: true do |f| %>
   <%= form_with model: @user do |f| %>
 
     <%= f.label :name, "Name:"%> 
