--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <center>
+  <p><%= button_to "Login", login_path, method: :get %></p>
   <p><%= button_to "Create new user", register_path, method: :get %></p>
 
   <h2>Existing Users</h2>
