--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,6 +11,16 @@
       <%= form.label :email %>
       <%= form.email_field :email  %>
     </p>
+
+    <p>
+      <%= form.label :password %>
+      <%= form.password_field :password  %>
+    </p>
+
+    <p>
+      <%= form.label :password_confirmation %>
+      <%= form.password_field :password_confirmation  %>
+    </p>
     <%= form.submit "Create New User" %>
   <% end %>
 </center>
