--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
     <%= form.text_field :email %> <br>
     <%= form.label :password, "Password" %>
     <%= form.password_field :password %>
-    <%= form.label :password, "Password Confirmation" %>
+    <%= form.label :password_confirmation, "Password Confirmation" %>
     <%= form.password_field :password_confirmation %>
     <%= form.button "Create New User" %>
   <% end %>
