--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,30 @@
 <h1>Welcome to Viewing Party Lite</h1>
 
-<%=button_to "Create a New User", "/register", method: :get %><br>
 
-<section class="users">
+
+<%# <section class="users">
   <h3>Existing Users</h3>
     <ul>
       <% @users.each do |user| %>
-        <li><%= link_to "#{user.email}", user_path(user) %></li>
-      <% end %>
+        <li><%#= link_to "#{user.email}", user_path(user) %></li>
+      <%# end %>
     </ul>
-</section>
+</section> 
 
-<%= link_to "Log In", "/login" %>
+<% if current_user %>
+  <%= link_to "Log Out", "/logout" %>
+<% else %>
+  <%=button_to "Create a New User", "/register", method: :get %><br>
+  <%= link_to "Log In", "/login" %>
+<% end %>
+
+<% if current_user %>
+<section class="users">
+      <h3>Existing Users</h3>
+        <ul>
+          <% @users.each do |user| %>
+            <li><%= user.email %></li>
+          <% end %>
+        </ul>
+    </section>
+<% end %>
