--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,11 @@
 <% end %>
   <%# <%= link_to "Log In", login_path %>
 
+  <h2>Existing Users:</h2>
+  <% @users.each do |user| %>
+    <p><%= user.email %></p>
+  <% end %>
+
   <%# <h2>Existing Users:</h2>
   <% @users.each do |user| %>
     <%# <p><%= link_to user.email, "/users/#{user.id}" %> 
