--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
+<% if session[:user_id] %>
+  <%= link_to "Log Out", logout_path %><br>
+<% else %>
+  <%= link_to "Log In", login_path %><br>
+  <%= link_to "Register", register_path %><br>
+<% end %>
+
 <h3>Existing Users</h3>
 
 <% @users.each do |user| %>
