--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <%= link_to "Log Out", logout_path %><br>
 <% else %>
   <%= link_to "Log In", login_path %><br>
-  <%= link_to "Register", register_path %><br>
+  <%= link_to "Create New User", register_path %><br>
 <% end %>
 
 <h3>Existing Users</h3>
