--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 
   <% @users.each do |user| %>
     <div id ="user_<%= user.id %>">
-      <%= link_to "#{user.name} - #{user.email}", user_path(user.id) %>
+      <%= "#{user.name} - #{user.email}" %>
     </div>
   <% end %>
 
