feature: Add authorization to landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/@rails/ujs/dist/rails-ujs.min.js" %>
 
     <style>
       body {
