--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,22 +1,26 @@
+<p><%= link_to "Dashboard", dashboard_index_path %></p>
 <% if current_user %>
   <p style="text-align: center; margin-top: 20px;">
-    <%= link_to "Log Out", logout_path, method: :delete, style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
+    <%= link_to "Log Out", logout_path, method: :delete, data: { confirm: "Are you sure you want to log out?" }, style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
   </p>
-<% else %>
+<% elsif %>
   <p style="text-align: center; margin-top: 20px;">
     <%= link_to "Create New User", "/register", style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
-    <br>
+  </p>
+  <p style="text-align: center; margin-top: 20px;">
     <%= link_to "Log In", login_path, style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
   </p>
 <% end %>
 
-<div id="existing_users" style="margin-top: 20px;">
-  <ul style="list-style-type: none; padding: 10px 0; margin: 0;">
-    <li style="font-weight: bold;">All Users:</li><br>
-    <% @users.each do |user| %>
-      <li style="margin-bottom: 10px;">
-        <%= link_to "#{user.name}", "/users/#{user.id}", style: "background-color: #EEE; color: #333; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
-      </li>
-    <% end %>
-  </ul>
-</div>
+<% if current_user && current_user.member? %>
+  <div id="existing_users" style="margin-top: 20px;">
+    <ul style="list-style-type: none; padding: 10px 0; margin: 0;">
+      <li style="font-weight: bold;">All Users:</li><br>
+      <% @users.each do |user| %>
+        <li style="margin-bottom: 10px;">
+          <%= user.email %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
