--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -79,19 +79,22 @@
     <h2>Welcome</h2>
     <% if session[:user_id] %>
       <%= link_to "Log Out", logout_path, method: :delete %>
+      
+      <%= link_to "My Discoveries", "/users/#{session[:user_id]}" %>
+      <p>Registered Users:</p>
+    <ul class="user-list">
+      <% @users.each do |user| %>
+        <li id="user_names<%= user.id %>">
+          <p><%= user.email%></p>
+        </li>
+      <% end %>
+    </ul>
     <% else %>
       <%= link_to 'Create a New User', register_path %>
       <br>
       <%= link_to "Log In", login_path %>
     <% end %>
-    <p>Registered Users:</p>
-    <ul class="user-list">
-      <% @users.each do |user| %>
-        <li id="user_names<%= user.id %>">
-          <%= link_to user.name, "/users/#{user.id}" %>
-        </li>
-      <% end %>
-    </ul>
+    
   </div>
 </body>
 </html>
