--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,9 +1,12 @@
 
-<%= link_to "Create New User", new_user_path %>
-<%= link_to "Login", "/login" %>
+<% if session[:user_id].present? %>
+  <%= link_to "Log Out", logout_path%>
+<% elsif %>
+  <%= link_to "Create New User", new_user_path %>
+  <%= link_to "Login", "/login" %>
+<%end%>
 
 <h3>Existing Users</h3>
-
 <% @users.each do |user| %>
   <%= link_to "#{user.name}", user_path(user.id) %>
 <% end %>
