Fix syntax, create #log_in in spec_helper

--- a/app/views/users/viewing_parties/new.html.erb
+++ b/app/views/users/viewing_parties/new.html.erb
@@ -23,8 +23,8 @@
   <br>
 
   <%= f.hidden_field :host_id, value: @host.id %>
-  <%= f.hidden_field :movie_title, value: @movie.title %>
-  <%= f.hidden_field :image, value: @movie.image %>
+  <!-- <%= f.hidden_field :movie_title, value: @movie.title %> -->
+  <!-- <%= f.hidden_field :image, value: @movie.image %> -->
 
   <%= f.submit "Create Party" %>
 <% end %>
