--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,7 +1,7 @@
 <p><%= link_to "Dashboard", dashboard_index_path %></p>
 <% if current_user %>
   <p style="text-align: center; margin-top: 20px;">
-    <%= link_to "Log Out", logout_path, method: :delete, data: { confirm: "Are you sure you want to log out?" }, style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
+    <%= link_to "Log Out", logout_path, method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to log out?" }, style: "background-color: #4CAF50; color: #FFFFFF; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; font-size: 1rem; font-weight: bold;" %>
   </p>
 <% elsif %>
   <p style="text-align: center; margin-top: 20px;">
