--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ViewingPartyLite7</title>
+    <title>Cinema Social</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "/assets/login_user.css", "/assets/new_party.css", "/assets/landing.css", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/@rails/ujs/dist/rails-ujs.min.js" %>
 
@@ -51,7 +51,7 @@
   </head>
 
   <body>
-    <h1><span>Viewing Party</span></h1>
+    <h1><span>Cinema Social</span></h1>
 
     <div id="nav_bar">
       <%= link_to "Home", root_path %>
