--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,8 +1,18 @@
-<h2>Log In</h2>
-<%= form_with url: login_path, method: :post do |form| %>
-  <%= form.label :email, "Email:" %>
-  <%= form.text_field :email %>
-  <%= form.label :password, "Password:" %>
-  <%= form.text_field :password %>
-  <%= form.submit "Log In" %>
-<% end %>
+<%= stylesheet_link_tag 'login_user' %>
+<div class="login-form">
+  <h2 class="login-title">Log In</h2>
+
+  <%= form_with url: login_path, method: :post do |form| %>
+    <div class="form-group">
+      <%= form.label :email, "Email:", class: "form-label" %>
+      <%= form.text_field :email, class: "form-input" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :password, "Password:", class: "form-label" %>
+      <%= form.password_field :password, class: "form-input" %>
+    </div>
+
+    <%= form.submit "Log In", class: "button button--primary" %>
+  <% end %>
+</div>
