--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,22 +1,34 @@
-<h2>Create A Movie Party for <%= @facade.movie_details.title %></h2>
+<%= stylesheet_link_tag 'new_party' %>
+<div class="movie-party-form">
+  <h2>Create A Movie Party for <%= @facade.movie_details.title %></h2>
 
-<%= form_with url:"/users/#{@user.id}/movies/#{@facade.movie_details.id}/viewing-party/new", method: :post, local: true do |form| %>
-  <p><%= form.label :duration, "Duration of Party(in mins)" %></p>
-  <p><%= form.number_field :duration, min: @facade.movie_details.runtime %></p>
+  <%= form_with url:"/users/#{@user.id}/movies/#{@facade.movie_details.id}/viewing-party/new",
+    method: :post, local: true, class: "party-form" do |form| %>
+    <div class="form-group">
+      <%= form.label :duration, "Duration of Party (in mins)" %>
+      <%= form.number_field :duration, min: @facade.movie_details.runtime, class: "form-control" %>
+    </div>
 
-  <p><%= form.label :date, "When" %></p>
-  <p><%= form.date_field :date, min: Date.today %></p>
+    <div class="form-group">
+      <%= form.label :date, "When" %>
+      <%= form.date_field :date, min: Date.today, class: "form-control" %>
+    </div>
 
-  <p><%= form.label :time, "Start Time" %></p>
-  <p><%= form.time_field :time %></p>
+    <div class="form-group">
+      <%= form.label :time, "Start Time" %>
+      <%= form.time_field :time, class: "form-control" %>
+    </div>
 
-  <p><%= form.label :users, "Invite Other Users" %></p>
-  <p><%= form.collection_check_boxes :user_ids, @other_users, :id, :name %></p>
+    <%= form.label :users, "Invite Other Users" %>
+    <div class="form-group">
+      <%= form.collection_check_boxes :user_ids, @other_users, :id, :name, class: "form-control" %>
+    </div>
 
-  <p><%= form.hidden_field :movie_id, value: @facade.movie_details.id %></p>
-  <p><%= form.hidden_field :movie_title, value: @facade.movie_details.title %></p>
-  <p><%= form.hidden_field :movie_poster, value: @facade.movie_details.poster %></p>
-  <p><%= form.hidden_field :movie_runtime, value: @facade.movie_details.runtime %></p>
+    <%= form.hidden_field :movie_id, value: @facade.movie_details.id %>
+    <%= form.hidden_field :movie_title, value: @facade.movie_details.title %>
+    <%= form.hidden_field :movie_poster, value: @facade.movie_details.poster %>
+    <%= form.hidden_field :movie_runtime, value: @facade.movie_details.runtime %>
 
-  <p><%= form.submit "Create Party" %></p>
-<% end %>
+    <%= form.submit "Create Party", class: "btn btn-primary" %>
+  <% end %>
+</div>
