--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <%= button_to "Create a New User", new_user_path %>
 <div class="users">
   <ul><% @users.each do |user| %>
-    <li><%= link_to "#{user.name}", user_dashboard_path(user) %></li>
+    <li><%= link_to "#{user.name}", user_path(user) %></li>
   <% end %></ul>
 </div>
 
