--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,11 @@
 <h1> Viewing Party </h1>
 
-<%= button_to "Register", "/register" %>
+<%= button_to "Register", "/register", {method: "get"}  %>
 
 
 <ul id="current-users">
   <h3> Current Users </h3>
   <% @users.each do |user| %>
-    <li><%= link_to "#{user.name}", user_path(user) %></li>
+    <li><%= link_to "#{user.name}", user_path(user)%></li>
   <% end %>
 </ul>
