feat: Complete user dashboard and add viewingparty model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <div id="nav-container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <ul class="nav navbar-nav">
+          <h2>Viewing Party</h2>
           <li><%= link_to 'Home Page', "/", style: 'pull-right' %></li>
         </ul>
       </nav>
