feat: landing page (User Story 3)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <div id="header">
+    <%= link_to "Home", root_path %>
+    <h1>Viewing Party</h1>
+    </div>
     <title>ViewingPartyLite7</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
