--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <div id="title">
       <h1>Viewing Party</h1>
     </div>
+    <div id="new-user">
+      <%= button_to "Create New User", "/register" %>
+    </div>
     <%= yield %>
   </body>
 </html>
