consolidate controllers and remove pry

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <ul id="viewing-parties">
   <h3> Viewing Parties </h3>
-  <% @viewing_parties.each do |party| %>
+  <% @parties.each do |party| %>
     <li><%= party.movie_title %>%</li>
   <% end %>
 </ul>
