feat: add corresponding views for user story 3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <section>
+      <div class="nav"><p><%= link_to 'Home', root_path %></p></div>
+    </section>
     <%= yield %>
   </body>
 </html>
