--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <h1> <%= @user.name %>'s Dashboard  </h1>
 
-<%= button_to "Discover Movies"  %>
+<section id="discover-movies">
+<%= button_to "Discover Movies", user_discover_path(@user), {method: "get"} %>
+</section>
 
 <ul id="viewing-parties">
   <h3> Viewing Parties </h3>
