fix: add get method to link

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,5 +1,5 @@
 <div id="new-user">
-  <%= button_to "Create New User", "/register" %>
+  <%= button_to "Create New User", "/register", method: :get %>
 </div>
 
 <div id="users">
