feat: add new user form + handle sad path for   duplicate e-mail address
Co-authored-by: Thomas Hawley <120520954+thawley2@users.noreply.github.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
 
   <body>
     <%= link_to 'Home', root_path %>
+
+    <% flash.each do |type, message| %>
+    <p><%= message %></p>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
