--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,12 @@
     <section>
       <div class="nav"><p><%= link_to 'Home', root_path %></p></div>
     </section>
+
+        <% flash.each do |type, msg| %>
+      <div>
+        <%= msg %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
