--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,10 +1,11 @@
 <h1>Landing Page</h1>
 
 <h3>Existing Users</h3>
-<ul>
 <% @users.each do |user| %>
 <div id="user-<%= user.id %>">
+<ul>
   <b><li><%= link_to "#{user.name}", "/dashboard/#{user.id}" %></li></b>
+</ul>
 </div>
 <% end %>
-</ul>
+<%= button_to "New User", "/landing/new", method: :get %>
