Modify the create user button to be rerouted to the '/register' path

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -8,4 +8,4 @@
 </ul>
 </div>
 <% end %>
-<%= button_to "New User", "/landing/new", method: :get %>
+<%= button_to "New User", "/register", method: :get %>
