--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
 <h1>Viewing Party</h1>
 <br>
 <h2><%= "#{@user.name}'s Dashboard" %></h2>
+<br>
+<div id="discover-movies">
+  <%= button_to 'Discover Movies', "/users/#{@user.id}/discover", method: :get %>
+</div>
