--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,3 +5,7 @@
 <div id="discover-movies">
   <%= button_to 'Discover Movies', "/users/#{@user.id}/discover", method: :get %>
 </div>
+<br>
+<div id="viewing-parties">
+  <h3>My Viewing Parties</h3>
+</div>
