--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,39 @@
-<h1>Dashboard for <%=@user.name%></h1>
+<h1><%=@user.name%>'s Dashboard </h1>
+
+<%= button_to 'Discover Movies', user_discover_path(@user), method: :get  %>
+<hr>
+
+<h2>Parties Hosting</h2>
+<% @user.hosted_parties.each do |party| %>
+  <div id='hosting'>
+  <p><%= party.date %></p>
+  <p><%= party.start_time %></p>
+  <p>Host: <%= @user.name %></p>
+  <p>Invited:</p>
+  <ul>
+  <% party.users.each do |user| %>
+    <li><%= user.name %></li>
+  <% end %>
+  </ul>
+  </div>
+<% end %>
+
+<h2>Parties Attending</h2>
+<% @user.parties.each do |party| %>
+  <div id='invited'>
+  <p><%= party.date %></p>
+  <p><%= party.start_time %></p>
+  <p>Host: <%= get_host_name(party.host_id) %></p>
+  <p>Invited:</p>
+  <ul>
+  <% party.users.each do |user| %>
+    <% if user.id == @user.id %>
+      <li><b><%= user.name %></b></li>
+    <% else %>
+      <li><%= user.name %></li>
+    <% end %>
+  <% end %>
+  </ul>
+  </div>
+<% end %>
+
