--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @user.name %> Dashboard</h3>
 
-<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
+<%= button_to "Discover Movies", user_discover_path(@user), method: :get %>
 
 <div id="viewing_parties">
 <h4>Viewing Parties:</h4>
