--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,10 @@
 <ol type="1">
 <% @facade.movies.each do |movie| %>
+<div id="movie-<%=movie.id%>">
   <h4><li><%= movie.title %></li></h4>
+  <li><%=movie.vote_average%></li>
+</div>
 <% end %>
 </ol>
+
+<%= button_to "Return to Discover", user_discover_path(@user), method: :get %>
