change the link to a button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
-<%= button_to "Create New User", new_user_path %>
+<%= form_with model: @user, url: new_user_path, method: :get, local: true do |form| %>
+  <%= form.button "Create New User" %>
+<% end %>
 <h2>Existing Users</h2>
 <% @users.each do |user|%>
 <%= link_to "#{user.email}", user_path(user) %><br>
