refactor: update view with new host_name method to get host through party
Co-authored-by: Thomas Hawley <120520954+thawley2@users.noreply.github.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,11 +19,11 @@
 <% end %>
 
 <h2>Parties Attending</h2>
-<% @user.parties.each do |party| %>
+<% @user.invited_parties.each do |party| %>
   <div id='invited'>
   <p><%= party.date %></p>
   <p><%= party.start_time %></p>
-  <p>Host: <%= get_host_name(party.host_id) %></p>
+  <p>Host: <%= party.host_name %></p>
   <p>Invited:</p>
   <ul>
   <% party.users.each do |user| %>
