create discover controller, add discover index

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,1 +1,13 @@
-This is the Movie Discover Page for whatever user
+<h1><%= @user.name %>'s Discovery Page</h1>
+
+<section id="discover-movies">
+  <%= button_to "Discover Top Movies", user_movies_path(@user), {method: "get"} %>
+</section>
+
+<section id="title-search">
+  <%= form_with url: user_movies_path(@user), local: true, method: :get do |form|%>
+    <%= form.label :title, "Movie Title" %>
+    <%= form.text_field :title %>
+    <%= form.submit "Search" %>
+  <% end %>
+</section>
