--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ViewingPartyLite7</title>
+    <title>Viewing Party</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <div id="title">
+      <h1>Viewing Party</h1>
+    </div>
+    <%= render partial: 'shared/navigation' %>
     <%= yield %>
   </body>
 </html>
