--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,1 +1,10 @@
-<h1>Discover Movies</h1>
+<h1>Viewing Party</h1>
+<h2>Discover Movies</h2>
+
+<%= button_to 'Discover Top Rated Movies', user_movies_path(@user), method: :get %>
+<br><br>
+<%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
+  <%= f.label :q %>
+  <%= f.text_field :q %>
+  <%= f.submit 'Search' %>
+<% end %>
